--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".MqttTestActivity"
+            android:exported="false" />
+        <activity
             android:name=".ArduinoTestActivity"
             android:exported="false" />
         <activity
